# nanoVLA

./: .gitignore  README.md  config.py  precompute.py  pyproject.toml  temp.py  temp_grad_check.py  train.py
big_vision/: utils.py
data/: advanced_dataset.py  utils.py
models/: DiT.py  action_state_proj.py  modulator.py  visual_encoder.py  vla.py
tests/: test_vla.py
vis/: animate_action_horizon.py  dataset_mapper.py  plot_std.py  validate_mapping.py  visualize_horizon.py  visualize_rerun.py
