[project]
name = "nanovla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "flax>=0.12.7",
    "jax>=0.10.1",
    "opencv-python>=4.13.0.92",
    "optax>=0.2.8",
    "scipy",
    "sentencepiece",
    "tiktoken",
    "tokenizers",
    "transformers",
]
