[project]
name = "nanovla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "flax>=0.12.7",
    "jax[cuda12]>=0.10.1",
    "opencv-python>=4.13.0.92",
    "optax>=0.2.8",
    "scipy",
    "sentencepiece",
    "tiktoken",
    "tokenizers==0.21.4",
    "transformers==4.52.4",
    "huggingface-hub==0.36.2",
    "genesis-world>=1.1.0",
    "wandb>=0.27.1",
    "weave>=0.52.42",
]
